--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,9 @@ html {
 }
 
 body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
     font-family: 'Poppins', sans-serif;
     background-color: #fff;
     color: #222;
