--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,13 @@ header {
     z-index: 1000;
     background-color: #fff; /* o el color que uses */
     padding-top: env(safe-area-inset-top); /* evita que el notch lo tape */
+    padding-bottom: 1rem;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+}
+
+.safe-area-wrapper {
+    padding-left: env(safe-area-inset-left);
+    padding-right: env(safe-area-inset-right);
 }
 
 /* Para cubrir el notch completamente y evitar que se vea el contenido detrás del header */
@@ -68,6 +74,7 @@ body::before {
     background-color: #fff; /* el mismo color del header */
     z-index: 999; /* justo debajo del header */
 }
+
 
 .header .container {
     display: flex;
@@ -111,7 +118,6 @@ body::before {
 .hero {
     position: relative;
     width: 100%;
-    height: auto;
     min-height: 50vh;
     overflow: hidden;
     display: flex;
@@ -122,11 +128,11 @@ body::before {
 
 .hero-video {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 100%;
-    height: auto;
-    transform: translate(-50%, -50%);
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 50vh;
+    object-fit: cover;
     z-index: 1;
 }
 
